# mconfig

./: configure.in
mconfig/: Makefile.am  config.cpp  config.h  config_parser.cpp  config_parser.h  mconfig.h  mconfig.par  varlist.cpp  varlist.h  varlist.par  varlist_parser.cpp
